[package]
name = "ByteBlast"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[profile.release]
lto = true

[target.x86_64-pc-windows-gnu]
rustflags = [
  "-C", "target-feature=+crt-static",
  "-C", "link-arg=-s",
]

[[bin]]
name = "ByteBlast"
path = "main.rs"

